# mcp-playground

./: .gitignore  pyproject.toml
src/mcp-server/: main.py  server.py
src/mcp-server/tools/: weather.py
