[project]
name = "mcp-playground"
version = "0.1.0"
description = "Personal project for experimenting with MCP servers and tools"
authors = [
    {name = "LucAntEd",email = "lucanted@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "mcp (>=1.26.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
